[gd_scene load_steps=13 format=2]

[ext_resource path="res://enemic1/enemic_1.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://lletres/Scratch Boys.ttf" type="DynamicFontData" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "caminant",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 83.3687, 73.4024 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 111.32, 206.123 )

[sub_resource type="DynamicFont" id=4]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 98.8263, 579.689 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 380.18, 94.1638 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 129.191, 201.894 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 222.424, 240.034 )

[node name="enemic_1" type="Node2D"]

[node name="enemic_1" type="KinematicBody2D" parent="."]
visible = false
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="enemic_1"]
position = Vector2( 578.044, 296.289 )
scale = Vector2( 2.62868, 2.25283 )
frames = SubResource( 1 )
animation = "caminant"

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemic_1"]
position = Vector2( 576.658, 298.856 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="enemic_1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemic_1/Area2D"]
position = Vector2( 581.792, 122.984 )
shape = SubResource( 3 )

[node name="timer_atac" type="Timer" parent="enemic_1"]
one_shot = true

[node name="timer_movent" type="Timer" parent="enemic_1"]
wait_time = 2.0
one_shot = true

[node name="Label" type="Label" parent="enemic_1"]
margin_left = 246.855
margin_top = 65.3871
margin_right = 580.855
margin_bottom = 137.387
custom_fonts/font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vida" type="Label" parent="enemic_1"]
margin_left = 617.021
margin_top = 38.3464
margin_right = 958.021
margin_bottom = 168.347
custom_fonts/font = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="radar" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="radar"]
position = Vector2( -115.865, 272.048 )
rotation = 1.56706
shape = SubResource( 6 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="radar"]
position = Vector2( 1081.55, 269.051 )
shape = SubResource( 7 )

[node name="rebot_esquerra" type="Area2D" parent="."]
position = Vector2( 0, 4.23785 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="rebot_esquerra"]
position = Vector2( -991.659, 110.185 )
shape = SubResource( 8 )

[node name="rebot_dret" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="rebot_dret"]
position = Vector2( 1733.28, 16.9516 )
shape = SubResource( 9 )
[connection signal="body_entered" from="enemic_1/Area2D" to="enemic_1" method="_on_Area2D_body_entered"]
[connection signal="timeout" from="enemic_1/timer_movent" to="enemic_1" method="_on_timer_movent_timeout"]
[connection signal="body_entered" from="radar" to="enemic_1" method="_on_radar_body_entered"]
[connection signal="body_entered" from="rebot_esquerra" to="enemic_1" method="_on_rebot_esquerra_body_entered"]
[connection signal="body_entered" from="rebot_dret" to="enemic_1" method="_on_rebot_dret_body_entered"]
